# CAVEAT

./: .gitignore  CLAUDE.md  MODES.md  README.md  TODO.md  environment.yml  pyproject.toml
caveat/: __init__.py  assemble.py  cli.py  database.py  fragment.py  geometry.py  query.py
data/: chembl_5k.smi  chembl_sample.smi
scripts/: backfill_descriptors.py  build_hierarchical_frags.py  embed_approved_screen.py  embed_chembl_screen.py  embed_hier_screen.py  inspect_results.py  make_molstar_html.py  make_pymol_session.py  second_order_screen.py
tests/: conftest.py  test_assemble.py  test_database.py  test_fragment.py  test_geometry.py  test_query.py
